tests/testcases/valid/control_flow/02_loops.ciel
// While and until loops

int main() {
    int i = 0;
    int count = 10;
    
    // Simple while loop
    while (i != 0) {
        i = i + 1;
    }
    
    // While with condition
    while (count > 0) {
        count = count - 1;
    }
    
    // Until loop
    until (i == 10) {
        i = i + 1;
    }
    
    // Nested while
    int j = 0;
    while (i < 20) {
        while (j < 5) {
            j = j + 1;
        }
        i = i + 1;
    }
    
    return 0;
}
