tests/testcases/invalid/semantic/19_until_condition_not_bool.ciel
// Error: until condition must be of type 'bool'
int main() {
    int x = 5;
    until (x) {  // Error: x is int, not bool
        x = x - 1;
    }
    return 0;
}
